--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
     <meta charset='utf-8' />
-    <title>Display driving directions</title>
+    <title>Ottawa cycling directions</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.44.0/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.44.0/mapbox-gl.css' rel='stylesheet' />
+    <link href='https://www.mapbox.com/base/latest/base.css' rel='stylesheet' />
     <style>
         body { margin:0; padding:0; }
         #map { position:absolute; top:0; bottom:0; width:100%; }
@@ -17,8 +18,37 @@
 <!--<script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v3.1.1/mapbox-gl-directions.js'></script>-->
 <link rel='stylesheet' href='mapbox-gl-directions.css' type='text/css' />
 <div id='map'></div>
+<div class='pin-right pad2 '>
+  <a href='#legend' class='button'>Legend</a>
+</div>
+<div id='legend' class='col4 pad2 row7 pin-right offcanvas-right '>
+  <a href='#' class='fill-darken2 pad1 icon close button fr'></a>
+  <div class='clearfix'></div>
+  <form>
+    <h5>Street legend</h5>
+    <fieldset class='checkbox-pill clearfix '>
+      <input type='checkbox' id='legend-lts1'>
+      <label for='legend-lts1' id='legend-lts1-label' class='button icon check quiet col12' style="text-align:left;">LTS-1</label>
+      <input type='checkbox' id='legend-lts2'>
+      <label for='legend-lts2' id='legend-lts2-label' class='button icon check quiet col12' style="text-align:left;">LTS-2</label>
+      <input type='checkbox' id='legend-lts3'>
+      <label for='legend-lts3' id='legend-lts3-label' class='button icon check quiet col12' style="text-align:left;">LTS-3</label>
+      <input type='checkbox' id='legend-lts4'>
+      <label for='legend-lts4' id='legend-lts4-label' class='button icon check quiet col12' style="text-align:left;">LTS-4</label>
+    </fieldset>
+
+  </form>
+</div>
+
 
 <script>
+var ltsLayers = [
+    {id:"legend-lts1", name:'LTS 1 - Suitable for children', color:'#0099cc', opacity:1, tileset:'mapbox://zzptichka.53bf2frg', layer:'level_1-45ccc2'},
+    {id:"legend-lts2", name:'LTS-2 - Low stress', color:'#1C7C54', opacity:1, tileset:'mapbox://zzptichka.771hbw7i', layer:'level_2-18vk61'},
+    {id:"legend-lts3", name:'LTS-3 - Medium stress', color:'#F0C808', opacity:1, tileset:'mapbox://zzptichka.5jgkszgd', layer:'level_3-97ctwn'},
+    {id:"legend-lts4", name:'LTS-4 - High stress', color:'#DD5454', opacity:1, tileset:'mapbox://zzptichka.4ioiilcy', layer:'level_4-b8wity'}
+  ];
+
 mapboxgl.accessToken = 'pk.eyJ1IjoienpwdGljaGthIiwiYSI6ImNqN2FubTQ5ejBpZDAyd285MmZsdHN3d3IifQ.dc6SvmJLcl7KGPQlBYFj-g';
 var map = new mapboxgl.Map({
     container: 'map',
@@ -29,11 +59,49 @@ var map = new mapboxgl.Map({
 
 map.addControl(new MapboxDirections({
     accessToken: mapboxgl.accessToken,
-    //profile: 'mapbox/cycling',
-    api: 'http://localhost:5000/route/v1/bicycle/',
+    profile: 'lts4',
+    //api: 'http://localhost:5000/route/v1',
+    api: 'http://ec2-34-214-224-151.us-west-2.compute.amazonaws.com/route/v1',
     alternatives: true,
     unit: 'metric'
 }), 'top-left');
+
+function toggleLayer (checkbox) {
+    map.setLayoutProperty(checkbox.currentTarget.id, 'visibility', checkbox.currentTarget.checked?'visible':'none');
+  }
+
+document.getElementById('legend-lts1').onclick = toggleLayer
+document.getElementById('legend-lts2').onclick = toggleLayer
+document.getElementById('legend-lts3').onclick = toggleLayer
+document.getElementById('legend-lts4').onclick = toggleLayer
+
+
+map.on('style.load', function () {
+
+  ltsLayers.forEach(function (layer, i) {
+
+    map.addLayer({
+      "id": layer.id,
+      "type": "line",
+      "source": {
+          type: 'vector',
+          url: layer.tileset,
+      },
+      "source-layer": layer.layer,
+      "layout": {
+          "line-join": "round",
+          "line-cap": "round"
+      },
+      "paint": {
+          "line-color": layer.color,
+          "line-width": 2
+      }
+    });
+    map.setLayoutProperty(layer.id, 'visibility', 'none');
+    document.getElementById(layer.id+'-label').innerHTML = '<span style="display: inline-block;width:50px; height:8px;background-color: '+layer.color+'"></span>&nbsp;'+layer.name;
+  });
+
+});
 </script>
 
 </body>
