--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href='https://www.mapbox.com/base/latest/base.css' rel='stylesheet' />
     <style>
         body { margin:0; padding:0; }
+        #app { position:absolute; top:0; right:0; bottom:0; left:0; }
         #map { position:absolute; top:0; bottom:0; width:100%; }
     </style>
 </head>
@@ -17,16 +18,17 @@
 <script src = 'mapbox-gl-directions.js'></script>
 <!--<script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v3.1.1/mapbox-gl-directions.js'></script>-->
 <link rel='stylesheet' href='mapbox-gl-directions.css' type='text/css' />
+<div id='app' class='col12 contain fill-navy dark clip'>
 <div id='map'></div>
 <div id='legendbtn' class='pin-right pad2 '>
   <a href='#legend' class='button' onclick="document.getElementById('legendbtn').style.display='none'">Legend</a>
 </div>
-<div id='legend' class='col4 pad2 row7 pin-right offcanvas-right '>
+<div id='legend' class='col4 pad2 row7 pin-right offcanvas-right scroll-styled'>
   <a href='#' class='fill-darken2 pad1 icon close button fr' onclick="document.getElementById('legendbtn').style.display='block'"></a>
   <div class='clearfix'></div>
   <form>
     <h5>Street legend</h5>
-    <fieldset class='checkbox-pill clearfix '>
+    <fieldset class='checkbox-pill clearfix fill-darken2'>
       <input type='checkbox' id='legend-lts1'>
       <label for='legend-lts1' id='legend-lts1-label' class='button icon check quiet col12' style="text-align:left;">LTS-1</label>
       <input type='checkbox' id='legend-lts2'>
@@ -39,7 +41,7 @@
 
   </form>
 </div>
-
+</div>
 
 <script>
 var ltsLayers = [
@@ -54,8 +56,21 @@ var map = new mapboxgl.Map({
     container: 'map',
     style: 'mapbox://styles/mapbox/light-v8',
     center: [-75.697927,45.417431],
-    zoom: 13
+    zoom: 13,
+    minZoom: 10,
+    maxZoom: 17,
+    maxBounds: [[-76.385193,44.963826],[-75.011902,45.614998]]
 });
+
+map.addControl(new mapboxgl.GeolocateControl({
+    positionOptions: {
+        enableHighAccuracy: true
+    }
+}), 'bottom-right');
+
+map.addControl(new mapboxgl.NavigationControl(), 'bottom-right');
+
+map.addControl(new mapboxgl.ScaleControl(), 'bottom-left');
 
 map.addControl(new MapboxDirections({
     accessToken: mapboxgl.accessToken,
