fixed legend font color

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <script src = 'mapbox-gl-directions.js'></script>
 <!--<script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v3.1.1/mapbox-gl-directions.js'></script>-->
 <link rel='stylesheet' href='mapbox-gl-directions.css' type='text/css' />
-<div id='app' class='col12 contain fill-navy dark clip'>
+<div id='app' class='col12 contain clip'>
 <div id='map'></div>
 <div id='legendbtn' class='pin-right pad2 '>
   <a href='#legend' class='button' onclick="document.getElementById('legendbtn').style.display='none'">Legend</a>
